--- a/2-DOM/index-practice.html
+++ b/2-DOM/index-practice.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Practice-dom</title>
+    <title>Practice JS dom</title>
 </head>
 <body>
     <ul>
@@ -22,7 +22,7 @@
     	var valueName = inputName.value;
     	document.getElementById('name').innerText = valueName;
     };
-    
+
     function getaddress(){
     	var valueAddress = inputAddress.value;
     	document.getElementById('address').innerText = valueAddress;
